# atrosha-optimized

./: .gitignore  .vercelignore  Atrosha Deep Dive Book  README.md  demo.py  diff.txt  docker-compose.yml  generate_clones.py  git_status.txt  history.txt  log.txt  old_vercelignore.txt  send_outreach.py  sent_log.txt  temp_diff.txt  test_imap_sync.py  vercel.txt  vercel_dashboard_info.txt  vercel_deploys.txt  vercel_projects.txt  vercel_vyc1_info.txt
.github/workflows/: ci.yml
Atrosha/: .gitignore  ENTERPRISE_SETUP.md  LICENSE  README.md  SECURITY.md  cleanup_test.ps1  docker-compose.yml  docker_compose_ps.txt  e2e_out.txt  e2e_test.py  export_model.py  git_staged.txt  git_status.txt  humanized_text.txt  load_test.py  logs.txt  out3.txt  out_atrosha.txt  out_atrosha2.txt  priv.hex  proxy_logs.txt  proxy_logs_new.txt  pub.hex  real_world_bot.py  render.yaml  run_local.py  test_1_validator.ps1  test_2_proxy.ps1  test_3_agent.ps1  test_atrosha.py  test_audit.db  test_nlp_policy.py  tmp_docker.txt  tmp_files.txt  tmp_proxy.txt
Atrosha/dashboard/: Dockerfile  agent_schema.json  build_log.txt  build_output.txt  deploy_error.txt  eslint.config.mjs  lint_log.txt  lint_output.txt  lint_output_fixed.txt  lint_output_fixed_2.txt  lint_output_fixed_3.txt  next.config.ts  package-lock.json  package.json  policies_schema.json  schema.json
Atrosha/deployment/: docker-compose.yml  errors.txt  openapi.yaml
Atrosha/docs/: Atrosha_The_Definitive_Engineering_Book.md  atrosha_master_guide.md  database_schema.md
Atrosha/intent_validator/: dockerfile  llm.py  main.py  refund_policy.py  requirements.txt
Atrosha/proto/: spend_permit.proto
Atrosha/proxy/: .env.example  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build_benches.txt  build_error.txt  build_output.txt  check.txt  check2.txt  check3.txt  check4.txt  check5.txt  check_benches.txt  check_out.txt  commit_output.txt  compiled_benchmarks.txt  dockerfile  err.txt  error.txt  errors.txt  render.yaml  run_log2.txt  test_comp_out.txt  test_output.txt
Atrosha/proxy/benches/: pct_bench.rs
Atrosha/proxy/src/: adapters.rs  audit.rs  circuit.rs  handlers.rs  json_policy.rs  kms.rs  lib.rs  main.rs  metrics.rs  middleware.rs  permit.rs  policy.rs  ratelimit.rs  rbac.rs  registry.rs  semantic.rs  state.rs  validation.rs  whitelist.rs
Atrosha/proxy/src/model_check/: engine.rs  ltl.rs  mod.rs
Atrosha/proxy/src/tee/: mod.rs  nitro.rs  verify.rs
Atrosha/proxy/src/zkp/: compiler.rs  mod.rs  policy_lang.rs  prover.rs  state_oracle.rs  verifier.rs
Atrosha/research/: README.md  implementation_plan.md
Atrosha/schemas/: audit_log.sql
Atrosha/sdk/: AI_GUARD_DESIGN.md  admin_cli.py  ai_guard.py  analytics.py  priv.hex  (+7 more)
Atrosha/sdk-node/: package-lock.json  package.json
Atrosha/sdk-python/: README.md  setup.py
Atrosha/sdk/python/: README.md  pyproject.toml
Atrosha/sdk/python/atrosha/: __init__.py  client.py  types.py
_archive/: Project Atrosha.code-workspace  package-lock.json  package.json
atrosha_test/: build_errors.txt  build_info.txt  diagnose.txt  diagnose2.txt  diagnose4.txt  diagnose5.txt  docker-compose.yml  domain_map.txt  git_link.txt  landing_status.txt  raw_events.txt  vercel_detail.txt  vercel_status.txt
atrosha_test/proxy/: Cargo.toml  budget.json
atrosha_test/proxy/src/: main.rs
landing-page/: .gitignore  Dockerfile  build_log.txt  deployments.txt  lint_log.txt  lint_output.txt  lint_output_new.txt  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  ssl_check.txt
tmp/: hero_history.txt  hero_old.tsx
(+222 files in other folders)
