[package]
name = "atrosha-proxy"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full", "sync"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp", "tokio-native-tls-comp", "script", "aio"] }
ed25519-dalek = "2.1"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
base64 = "0.21"
jsonwebtoken = "9"
sha2 = "0.10"
async-trait = "0.1"
once_cell = "1.19"
prometheus = "0.13"
ethers = { version = "2.0", features = ["rustls", "ws"] }
regex = "1"
url = "2.5"

