[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atrosha"
version = "1.0.0"
description = "Official Python SDK for the Atrosha AI Agent Safety Proxy"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["atrosha", "ai-safety", "agent-proxy", "llm-security"]
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://atrosha.bond"
Repository = "https://github.com/kash002001/atrosha"

[tool.hatch.build.targets.wheel]
packages = ["atrosha"]
